Added about_group.html and fix style.css

--- a/about_group.html
+++ b/about_group.html
@@ -30,9 +30,12 @@
   <link href="css/style.css" rel="stylesheet">
 
   <style>
-    #header.header-transparent {
-  background: transparent;
-  }
+    #hero{
+        background-color: #e8ecf5;
+    }
+    #header{
+        background: rgba(25, 25, 25, 0.95);
+    }
   </style>
 
 </head>
@@ -49,7 +52,7 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="#hero">Головна</a></li>
+          <li><a class="nav-link scrollto active" href="index.html">Головна</a></li>
           <li><a class="nav-link" href="about_group.html">Про группу</a></li>
           <li><a class="nav-link" href="/">Про вчителів</a></li>
           <li><a class="nav-link" href="/">Наші досягнення</a></li>
@@ -69,12 +72,9 @@
       <div class="row">
         <div class="col-lg-6 d-lg-flex flex-lg-column justify-content-center align-items-stretch pt-5 pt-lg-0 order-2 order-lg-1" data-aos="fade-up">
           <div>
-            <h1>Сайт потрфоліо П12</h1>
-            <h2>Про группу, про вчителів, про навчання, та багато іншого вас очікує на цьому сайті...</h2></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br>
+            <h1>Про группу П12</h1>
+            </br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br>
           </div>
-        </div>
-        <div class="col-lg-6 d-lg-flex flex-lg-column align-items-stretch order-1 order-lg-2 hero-img" data-aos="fade-up">
-          <img src="img/hero-img.png" class="img-fluid" id="img-hero" alt="">
         </div>
       </div>
     </div>
