--- a/about_teacher.html
+++ b/about_teacher.html
@@ -72,7 +72,7 @@
       <div class="row">
         <div class="col-lg-6 d-lg-flex flex-lg-column justify-content-center align-items-stretch pt-5 pt-lg-0 order-2 order-lg-1" data-aos="fade-up">
           <div>
-            <h1>Про группу П12</h1>
+            <h1>Про вчителів П12</h1>
             </br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br>
           </div>
         </div>
