--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Головна</a></li>
           <li><a class="nav-link" href="about_group.html">Про группу</a></li>
-          <li><a class="nav-link" href="/">Про вчителів</a></li>
+          <li><a class="nav-link" href="about_teacher.html">Про вчителів</a></li>
           <li><a class="nav-link" href="/">Наші досягнення</a></li>
           <li><a class="nav-link scrollto" href="#footer">Контакти</a></li>
         </ul>
