Added about_group and added images group and update email&&instagram&&telegram, update more information..

--- a/about_teacher.html
+++ b/about_teacher.html
@@ -95,12 +95,11 @@
           <div class="col-lg col-md-6 footer-contact">
             <h3>Kovalenko - Konyk Project</h3>
             <p>
-              <strong>Email:</strong> -<br>
+              <strong>Email: kovalenko.nazar.p762@kfccte-nau.ukr.education or konyk.bohdan.p762@kfccte-nau.ukr.education</strong> -<br>
             </p>
             <div class="social-links mt-3">
-              <a href="https://t.me/"><i class='bx bxl-telegram'></i></a>
-              <a href="https://github.com/jaxer159"><i class='bx bxl-github' ></i></a>
-              <a href="https://paypal.me/"><i class='bx bxl-paypal' ></i></a>
+              <a href="https://t.me/jaxer159"><i class='bx bxl-telegram'></i></a>
+              <a href="https://instagram.com/bogdankonyk2016?igshid=ZGUzMzM3NWJiOQ=="><i class='bx bxl-instagram' ></i></a>
             </div>
           </div>
 
