--- a/index.html
+++ b/index.html
@@ -33,6 +33,21 @@
     #header.header-transparent {
   background: transparent;
   }
+
+  .fadein-text {
+  animation: fadein 2s;
+  -moz-animation: fadein 2s; /* Firefox */
+  -webkit-animation: fadein 2s; /* Safari and Chrome */
+  -o-animation: fadein 2s; /* Opera */
+}
+@keyframes fadein {
+  from {
+    opacity:0;
+  }
+  to {
+    opacity:1;
+  }
+}
   </style>
 
 </head>
@@ -44,6 +59,7 @@
     <div class="container d-flex align-items-center justify-content-between">
 
       <div class="logo">
+        <h2 class="fadein-text">П12</h2>
         <a href="index.html"><img src="img/" alt="" class="img-fluid"></a>
       </div>
 
@@ -66,11 +82,13 @@
   <section id="hero" class="d-flex align-items-center">
 
     <div class="container">
+    </br></br>
       <div class="row">
         <div class="col-lg-6 d-lg-flex flex-lg-column justify-content-center align-items-stretch pt-5 pt-lg-0 order-2 order-lg-1" data-aos="fade-up">
           <div>
+          </br>
             <h1>Сайт потрфоліо П12</h1>
-            <h2>Про группу, про вчителів, про навчання, та багато іншого вас очікує на цьому сайті...</h2></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br>
+            <h2>Про группу, про вчителів, про навчання, та багато іншого вас очікує на цьому сайті...</h2></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br>
           </div>
         </div>
         <div class="col-lg-6 d-lg-flex flex-lg-column align-items-stretch order-1 order-lg-2 hero-img" data-aos="fade-up">
@@ -95,12 +113,11 @@
           <div class="col-lg col-md-6 footer-contact">
             <h3>Kovalenko - Konyk Project</h3>
             <p>
-              <strong>Email:</strong> -<br>
+              <strong>Email: kovalenko.nazar.p762@kfccte-nau.ukr.education or konyk.bohdan.p762@kfccte-nau.ukr.education</strong> -<br>
             </p>
             <div class="social-links mt-3">
-              <a href="https://t.me/"><i class='bx bxl-telegram'></i></a>
-              <a href="https://github.com/jaxer159"><i class='bx bxl-github' ></i></a>
-              <a href="https://paypal.me/"><i class='bx bxl-paypal' ></i></a>
+              <a href="https://t.me/jaxer159"><i class='bx bxl-telegram'></i></a>
+              <a href="https://instagram.com/bogdankonyk2016?igshid=ZGUzMzM3NWJiOQ=="><i class='bx bxl-instagram' ></i></a>
             </div>
           </div>
 
