--- a/about_group.html
+++ b/about_group.html
@@ -87,13 +87,13 @@ img {
         <div class="col-lg-6 d-lg-flex flex-lg-column justify-content-center align-items-stretch pt-5 pt-lg-0 order-2 order-lg-1" data-aos="fade-up">
           <div>
             <h1>Про группу П12</h1>
-          </br><div class="line"></div></br></br>
+          </br><div class="line_h"></div></br></br>
             <div class="wrapper">
           <img src="img/about/group/arina.jpg"><div class="item"></br>
             <h2 style="color:black; font-size: 40px;">Аріна Царик</h2></br>
           <p>Мене звати Аріна і я майбутній програміст - самостійно вивчаю верстку веб-сторінок та пройшла курс з програмування на python. закінчила 9 класів у  Києво-Могилянському колегіумі та 8 класів школи Мистецв , де отримала середню хореографічну освіту. також трішки музикант-самоучка - граю на фортепіано та гітарі
           </p></div></div>
-        </br>
+        </br></br><div class="line_main"></div></br></br>
           <div class="wrapper">
             <img src="img/about/group/sasha.jpg"><div class="item"></br>
               <h2 style="color:black; font-size: 40px;">Шум Олександр</h2></br>
@@ -101,116 +101,113 @@ img {
               Що можу сказати про себе: 
               Займаюсь спортом та акторством.Виступав з п'єсою "Кохання в стилі бароко, або любов з неохоти", люблю борщ з салом, а також посидіти з друзями біля вогнища і послухати цікаві історії .
             </p></div></div>
-          </br>
+          </br></br><div class="line_main"></div></br></br>
           <div class="wrapper">
             <img src="img/about/group/artem.jpg"><div class="item"></br>
               <h2 style="color:black; font-size: 40px;">Артем Горобей</h2></br>
             <p>Я Горобей Артем, люблю займатися спортом, не вживаю алкоголь тому що я за ЗОЖ. Також люблю слухати музику та грати в відеоігри
             </p></div></div>
-          </br>
+          </br></br><div class="line_main"></div></br></br>
           <div class="wrapper">
             <img src="img/about/group/hohdan_yavtu.jpg"><div class="item"></br>
               <h2 style="color:black; font-size: 40px;">Богдан Явтушенко</h2></br>
             <p>Богдан, 16 років. Люблю активний відпочинок. Улюблений вид спорту — волейбол. Обожнюю чай. Ну на цьому все
             </p></div></div>
-          </br>
+          </br></br><div class="line_main"></div></br></br>
           <div class="wrapper">
             <img src="img/about/group/artem_ste.jpg"><div class="item"></br>
               <h2 style="color:black; font-size: 40px;">Артем Стеценко</h2></br>
             <p>Мене звати Артем , я навчаюсь у всп кфккте нау , ходжу в зал , полюбляю грати волейбол у вільний час , мрію стати програмістом
             </p></div></div>
-          </br>
+          </br></br><div class="line_main"></div></br></br>
           <div class="wrapper">
             <img src="img/about/group/zhenia.jpg"><div class="item"></br>
               <h2 style="color:black; font-size: 40px;">Євгеній Несін</h2></br>
             <p>Усім привіт, мене звати Євгеній і я вивчаю програмування , також самостійно вивчав створення сайтів на html, закінчив СЗШ 195 , зараз у вільний час проводжу благодійні концерти разом із гуртом Hurtowyna, почав займатись звукорежисурою та світлорежисурою  ще у п'ятому класі в школі , також граю на гітарі
             </p></div></div>
-          </br>
+          </br></br><div class="line_main"></div></br></br>
           <div class="wrapper">
             <img src="img/about/group/vorobei.jpg"><div class="item"></br>
               <h2 style="color:black; font-size: 40px;">Микита Воробей</h2></br>
             <p>Я - Воробйов Микита, студент ВСП КФККТЕ НАУ і майбутній бекенд програміст. Самостійно вивчаю розробку сайтів, проходжу курс на python, програмую ігри-новели(на Пайтоні звичайно), а також пишу музику. Закінчив 9 класів у школі №118 Всесвіт з поглибленням вивченням іноземних мов де і отримав базову середнью освіту.
             </p></div></div>
-          </br>
+          </br></br><div class="line_main"></div></br></br>
           <div class="wrapper">
             <img src="img/about/group/vlad.jpg"><div class="item"></br>
               <h2 style="color:black; font-size: 40px;">Владислав Паутов</h2></br>
             <p>Паутов Владислав 15 років, навчаюсь в коледжі НАУ на інженерію програмного забезпечення. Стараюсь. В дитинстві трішки займався футболом (4 роки) та більш в підлітковому віці займався вивченням програм та комп'ютера в цілому. Зараз старанно вчусь.
             </p></div></div>
-          </br>
+          </br></br><div class="line_main"></div></br></br>
           <div class="wrapper">
             <img src="img/about/group/artem_lev.jpg"><div class="item"></br>
               <h2 style="color:black; font-size: 40px;">Артем Левенець</h2></br>
             <p>мене звати Артем, я навчаюся в КФКТЕ НАУ на програміста, раніше навчався 9 років в звичайній школі, люблю гуляти з друзями на вулиці та в деякі комп'ютерні ігри
             </p></div></div>
-          </br>
+          </br></br><div class="line_main"></div></br></br>
           <div class="wrapper">
             <img src="img/about/group/jenya.jpg"><div class="item"></br>
               <h2 style="color:black; font-size: 40px;">Женя Дмитрієнко</h2></br>
             <p>Раніше займався футболом 8 років але згодом довелося закінчити з цим. Потім знайшов для себе курси по програмуванню фронтенд, я їх пройшов та зрозумів що мені цікаве програмування тому пішов вчитися на програміста.
             </p></div></div>
-          </br>
+          </br></br><div class="line_main"></div></br></br>
           <div class="wrapper">
             <img src="img/about/group/danilo.jpg"><div class="item"></br>
               <h2 style="color:black; font-size: 40px;">Данил Кисіль</h2></br>
             <p>мене звати Данило я майбутній програміст - самостійно вивчаю сс+, закінчив 9 класів школи №42. 
               займаюся спортом а точніше кікбоксом та баскетболом, цікавлюсь астрономією.
             </p></div></div>
-          </br>
+          </br></br><div class="line_main"></div></br></br>
           <div class="wrapper">
             <img src="img/about/group/tarik.jpg"><div class="item"></br>
               <h2 style="color:black; font-size: 40px;">Тарас Сергієнко</h2></br>
             <p>Студент КФКТЕ НАУ, майбутній програміст, розробник ігор, або просто Тарік. Постійно чимось зайнятий, люблю відкривати для себе щось нове та перевершувати вчорашнього себе. Звучить начебто я якийсь ботан, який на вулицю ніколи не виходить (так і є). Ну що ще сказати, вмію на руках стояти та полюбляю пиріжки с вишнями 😍.
             </p></div></div>
-          </br>
+          </br></br><div class="line_main"></div></br></br>
           <div class="wrapper">
             <img src="img/about/group/disha.jpg"><div class="item"></br>
               <h2 style="color:black; font-size: 40px;">Агаларов Мірмехді</h2></br>
             <p>Я Агаларов Мірмехді, мені 16 років, займався боксом 4 роки потім купив трамват і зрозумів що це краще ніж бокс, ходжу в тренажерний зал, щоб піднімати на пальцях ноги галактику.
             </p></div></div>
-          </br>
+          </br></br><div class="line_main"></div></br></br>
           <div class="wrapper">
             <img src="img/about/group/taras.jpg"><div class="item"></br>
               <h2 style="color:black; font-size: 40px;">Тарас Нечай</h2></br>
             <p>Нечай Тарас Андрійович, 16 років, займаюсь футболом 8 років, полюбляю подоружувати, улюблена їжа - піцца.
             </p></div></div>
-          </br>
+          </br></br><div class="line_main"></div></br></br>
           <div class="wrapper">
             <img src="img/about/group/nikita.jpg"><div class="item"></br>
               <h2 style="color:black; font-size: 40px;">Нікіта Гніденко</h2></br>
             <p>Нікіта, 16 років, народився в Києві. Вивчаю програмування та захоплююсь комп'ютерними іграми.
             </p></div></div>
-          </br>
+          </br></br><div class="line_main"></div></br></br>
           <div class="wrapper">
             <img src="img/about/group/sonia.jpg"><div class="item"></br>
               <h2 style="color:black; font-size: 40px;">Софія Редько</h2></br>
             <p>Софія Редько, 15 років. Закінчила 9 класів з атестатом з відзнакою. Наразі цікавлюсь малюванням, архітектурою і східною культурою.
             </p></div></div>
-          </br>
+          </br></br><div class="line_main"></div></br></br>
           <div class="wrapper">
             <img src="img/about/group/maks.jpg"><div class="item"></br>
               <h2 style="color:black; font-size: 40px;">Максим Чекалов</h2></br>
             <p>Мене звати Максим. Я доволі добре займаюсь спортом, та непогано спілкуюсь з людьми. Я обожнюю тварин, та мені подобається їм допомогати. А ще, я дуже радий, що зараз навчаюсь в КФКТЕ НАУ. Мені подобається моя спеціальність.
             </p></div></div>
-          </br>
+          </br></br><div class="line_main"></div></br></br>
           <div class="wrapper">
             <img src="img/about/group/ivan.jpg"><div class="item"></br>
               <h2 style="color:black; font-size: 40px;">Іван Шрамко</h2></br>
             <p>Іван Олександрович Шрамко - народився у Борисполі у 2007 році. Він має захоплення, такі як читання книг, зокрема манґи, і займатися на комп'ютері. Він любить вчитися новим речам, досліджувати технології та створювати щось нове.
             </p></div></div>
-          </br>
+          </br></br><div class="line_main"></div></br></br>
           <div class="wrapper">
             <img src="img/about/group/yevhenii.jpg"><div class="item"></br>
               <h2 style="color:black; font-size: 40px;">Євгеній Губич</h2></br>
-            <p>Женя вже проснувся,
-
-              До сонечка всміхнувся,
-              
-              Світи-світи сонечко
-              
+            <p>Женя вже проснувся. 
+              До сонечка всміхнувся. 
+              Світи-світи сонечко. 
               У моє віконечко.
             </p></div></div>
-          </br>
+          </br></br><div class="line_main"></div></br></br>
           <div class="wrapper">
             <img src="img/about/group/danya.jpg"><div class="item"></br>
               <h2 style="color:black; font-size: 40px;">Даня Коркішко</h2></br>
