--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
   <link href="css/style.css" rel="stylesheet">
 
   <style>
+  
+  @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+
     #header.header-transparent {
   background: transparent;
   }
@@ -59,8 +62,7 @@
     <div class="container d-flex align-items-center justify-content-between">
 
       <div class="logo">
-        <h2 class="fadein-text">П12</h2>
-        <a href="index.html"><img src="img/" alt="" class="img-fluid"></a>
+        <a href="index.html"><p style="font-family: 'Lobster', cursive; font-size: 40px; color: gray;">П-12</p></a>
       </div>
 
       <nav id="navbar" class="navbar">
