very bigggg update site and image

--- a/about_group.html
+++ b/about_group.html
@@ -10,7 +10,7 @@
   <meta name="keywords" content="">
 
   <!-- Favicons -->
-  <link href="img/" rel="icon">
+  <link href="img/icon.ico" rel="icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -52,6 +52,10 @@ img {
   margin-left: 150px;
   font-size: 25px;
 }
+
+#active{
+  color: #5777ba;
+}
   </style>
 
 </head>
@@ -63,15 +67,15 @@ img {
     <div class="container d-flex align-items-center justify-content-between">
 
       <div class="logo">
-        <a href="index.html"><img src="img/" alt="" class="img-fluid"></a>
+        
       </div>
 
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="index.html">Головна</a></li>
-          <li><a class="nav-link" href="about_group.html">Про группу</a></li>
-          <li><a class="nav-link" href="about_teacher.html">Про вчителів</a></li>
-          <li><a class="nav-link" href="/">Наші досягнення</a></li>
+          <li><a class="nav-link" id="active" href="about_group.html">Про групу</a></li>
+          <li><a class="nav-link" href="about_teacher.html">Про викладачів</a></li>
+          <li><a class="nav-link" href="blog.html">Наші досягнення</a></li>
           <li><a class="nav-link scrollto" href="#footer">Контакти</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -86,7 +90,7 @@ img {
       <div class="row">
         <div class="col-lg-6 d-lg-flex flex-lg-column justify-content-center align-items-stretch pt-5 pt-lg-0 order-2 order-lg-1" data-aos="fade-up">
           <div>
-            <h1>Про группу П12</h1>
+            <h1>Про групу П-12</h1>
           </br><div class="line_h"></div></br></br>
             <div class="wrapper">
               <img src="img/about/group/disha.jpg"><div class="item"></br>
@@ -159,14 +163,14 @@ img {
             </br></br><div class="line_main"></div></br></br>
             <div class="wrapper">
               <img src="img/about/group/karnauhov.jpg"><div class="item"></br>
-                <h2 style="color:black; font-size: 40px;">Карнаухов Максим</h2></br>
-              <p>...
+                <h2 style="color:black; font-size: 40px; margin-left: 90px;">Карнаухов Максим</h2></br>
+              <p style="margin-left:70px;">Студент відмовився надавати інформацію про себе(
               </p></div></div>
             </br></br><div class="line_main"></div></br></br>
             <div class="wrapper">
               <img src="img/about/group/danilo.jpg"><div class="item"></br>
-                <h2 style="color:black; font-size: 40px;">Данил Кисіль</h2></br>
-              <p>мене звати Данило я майбутній програміст - самостійно вивчаю сс+, закінчив 9 класів школи №42. 
+                <h2 style="color:black; font-size: 40px;">Данило Кисіль</h2></br>
+              <p>Мене звати Данило я майбутній програміст - самостійно вивчаю сс+, закінчив 9 класів школи №42. 
                 займаюся спортом а точніше кікбоксом та баскетболом, цікавлюсь астрономією.
               </p></div></div>
             </br></br><div class="line_main"></div></br></br>
@@ -190,8 +194,8 @@ img {
             </br></br><div class="line_main"></div></br></br>
             <div class="wrapper">
               <img src="img/about/group/kresan.jpg"><div class="item"></br>
-                <h2 style="color:black; font-size: 40px;">Кирилл Кресан</h2></br>
-              <p>Люблю речі, секонд хенд, гуляти і дівчат
+                <h2 style="color:black; font-size: 40px; margin-left: 150px;">Кіріл Кресан</h2></br>
+              <p style="margin-left:120px;">Люблю речі, секонд хенд, гуляти і дівчат
               </p></div></div>
             </br></br><div class="line_main"></div></br></br>
             <div class="wrapper">
@@ -286,7 +290,6 @@ img {
               <p>Богдан, 16 років. Люблю активний відпочинок. Улюблений вид спорту — волейбол. Обожнюю чай. Ну на цьому все
               </p></div></div>
             <!-- </br></br><div class="line_main"></div></br></br> -->
-          </br></br>
         </div>
       </div>
     </div>
@@ -323,7 +326,7 @@ img {
         Copyright <strong><span>Kovalenko && Konyk</span></strong>.
       </div>
       <div class="credits">
-        Designed by <a href="https://">Konyk Bohdan</a>, site created by <a href="https://github.com/jaxer159">Nazar Kovalenko</a> and website hosted @ <a href="https://github.com">Github Pages</a>
+        Designed by <a href="http://t.me/Bohdan_Konyk">Konyk Bohdan</a>, site created by <a href="https://github.com/jaxer159">Nazar Kovalenko</a> and website hosted @ <a href="https://github.com">Github Pages</a>
       </div>
     </div>
   </footer> <!-- End Footer -->
