--- a/inna.html
+++ b/inna.html
@@ -30,32 +30,23 @@
   <link href="css/style.css" rel="stylesheet">
 
   <style>
-  
-  @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+    #hero{
+        background-color: #e8ecf5;
+    }
+    #header{
+        background: rgba(25, 25, 25, 0.95);
+    }
 
-  #header.header-scrolled {
-    background: 0px 2px 15px rgba(0, 0, 0, 0.1);
-    box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+    .photo-container {
+  display: flex;
 }
 
-    /* #header.header-transparent {
-  background: transparent;
-  } */
+.photo {
+  flex: 1;
+  max-width: 80%; /* Кожна фотографія займає половину ширини контейнера */
+  height: auto; /* Автоматична висота зображення */
+}
 
-  .fadein-text {
-  animation: fadein 2s;
-  -moz-animation: fadein 2s; /* Firefox */
-  -webkit-animation: fadein 2s; /* Safari and Chrome */
-  -o-animation: fadein 2s; /* Opera */
-}
-@keyframes fadein {
-  from {
-    opacity:0;
-  }
-  to {
-    opacity:1;
-  }
-}
 #active{
   color: #5777ba;
 }
@@ -70,15 +61,15 @@
     <div class="container d-flex align-items-center justify-content-between">
 
       <div class="logo">
-        <a href="index.html"><p style="font-family: 'Lobster', cursive; font-size: 40px; color: gray;">П-12</p></a>
+        
       </div>
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto" id="active" href="#hero">Головна</a></li>
+          <li><a class="nav-link scrollto active" href="index.html">Головна</a></li>
           <li><a class="nav-link" href="about_group.html">Про групу</a></li>
           <li><a class="nav-link" href="about_teacher.html">Про викладачів</a></li>
-          <li><a class="nav-link" href="blog.html">Наші досягнення</a></li>
+          <li><a class="nav-link" id="active" href="blog.html">Наші досягнення</a></li>
           <li><a class="nav-link scrollto" href="#footer">Контакти</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -92,17 +83,22 @@
   <section id="hero" class="d-flex align-items-center">
 
     <div class="container">
-    </br></br>
       <div class="row">
         <div class="col-lg-6 d-lg-flex flex-lg-column justify-content-center align-items-stretch pt-5 pt-lg-0 order-2 order-lg-1" data-aos="fade-up">
           <div>
-          </br>
-            <h1>Офіційна сторінка П-12</h1>
-            <h2>"Знання - наше майбутнє, спільні сили - наш успіх!"</h2></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br>
+            <!-- <h1>Про вчителів П12</h1> -->
+            <a href="blog.html"><p style="font-size: 25px; width: 140%;"><i class="bx bx-chevrons-left"></i>Повернутися на минулу сторінку</p></a>
+            <div class="photo-container"><img src="https://ccte.nau.edu.ua/images/%D0%9D%D0%BE%D0%B2870/2.jpg" class="photo">
+            <img src="https://ccte.nau.edu.ua/images/%D0%9D%D0%BE%D0%B2870/3.jpg" class="photo" style="margin-left: 150px;"></div></br>
+            <img src="https://ccte.nau.edu.ua/images/%D0%9D%D0%BE%D0%B2870/4.jpg" class="photo" style="margin-left: 340px;"></br></br>
+            <div class="photo-container"><img src="https://ccte.nau.edu.ua/images/%D0%9D%D0%BE%D0%B2870/5.jpg" class="photo">
+            <img src="https://ccte.nau.edu.ua/images/%D0%9D%D0%BE%D0%B2870/7.jpg" class="photo" style="margin-left: 150px;"></div></br>
+            <img src="https://ccte.nau.edu.ua/images/%D0%9D%D0%BE%D0%B2870/6.jpg" class="photo" style="margin-left: 340px;"></br></br>  
+            <div class="photo-container"><img src="https://ccte.nau.edu.ua/images/%D0%9D%D0%BE%D0%B2870/8.jpg" class="photo">
+            <img src="https://ccte.nau.edu.ua/images/%D0%9D%D0%BE%D0%B2870/9.jpg" class="photo" style="margin-left: 150px;"></div></div>
+
+            
           </div>
-        </div>
-        <div class="col-lg-6 d-lg-flex flex-lg-column align-items-stretch order-1 order-lg-2 hero-img" data-aos="fade-up">
-          <a href="https://ccte.nau.edu.ua/" onclick="window.open(this.href,'_blank'); return false;"><img src="img/hero-img.png" class="img-fluid" id="img-hero"></a>
         </div>
       </div>
     </div>
@@ -110,19 +106,12 @@
   </section><!-- End Hero -->
 
   <main id="main">
+
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
    <footer class='footerbg' id="footer">
 
-   <hr style="color: black;">
-  </br></br></br>
-    <h4 style="margin-left: 85px; text-align: center; margin-right: 85px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur aut veniam eius atque voluptate ab iste fuga, velit possimus excepturi sunt qui sit consequuntur ratione beatae placeat sapiente voluptas illo!</h4>
-   </br></br>
-    <div style="text-align: center;">
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/zloQdc2eGmg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-  </div>
-</br></br></br>
     <div class="footer-top">
       <div class="container">
         <div class="row">
@@ -166,5 +155,4 @@
   <script src="js/main.js"></script>
   <script src="js/peel1.js" type="text/javascript"></script>
 </body>
-
 </html>
