--- a/about_teacher.html
+++ b/about_teacher.html
@@ -261,7 +261,7 @@ img {
 
   <div class="wrapper">
     <img src="img/about/teacher/yadviga.jpg" style="height: 600px;">
-    <div class="item"><h2 style="color:black; font-size: 40px;">Ядвіга Іванівна</h2><p>Керівник  фізичного виховання, голова комісії, спеціаліст вищої категорії, викладач - методист, відмінник освіти України
+    <div class="item"><h2 style="color:black; font-size: 40px;">Ціпоренко Ядвіга</h2><p>Керівник  фізичного виховання, голова комісії, спеціаліст вищої категорії, викладач - методист, відмінник освіти України
 
       Освіта:
       
@@ -283,6 +283,8 @@ img {
       </p></div>
   </div>
 </br></br><div class="line_main"></div></br></br>
+<p style="margin-left: -100px; width: 230%; font-size: 25px;">Здобувачі фахової передвищої освіти активно працюють на заняттях з фізичної культури і відповідно фізично розвиваються.
+  Це можна підтвердити відеоматеріалами виконання фізичних вправ нашої групи:</p>
           </br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br>
             </div>
           </div>
