--- a/about_teacher.html
+++ b/about_teacher.html
@@ -79,6 +79,22 @@ img {
       margin: 10px;
       text-align: center;
     }
+
+    .my-button {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: rgba(25, 25, 25, 0.95);
+            color: white;
+            text-align: center;
+            text-decoration: none;
+            border-radius: 25px;
+            font-size: 35px;
+            transition: background-color 0.3s ease;
+        }
+
+        .my-button:hover {
+            background-color: gray;
+        }
   </style>
 
 </head>
@@ -283,9 +299,13 @@ img {
       </p></div>
   </div>
 </br></br><div class="line_main"></div></br></br>
-<p style="margin-left: -100px; width: 230%; font-size: 25px;">Здобувачі фахової передвищої освіти активно працюють на заняттях з фізичної культури і відповідно фізично розвиваються.
-  Це можна підтвердити відеоматеріалами виконання фізичних вправ нашої групи:</p>
-          </br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br>
+<h1 style="margin-left: -100px; width: 230%; text-align: center;">Здобувачі фахової передвищої освіти активно працюють на заняттях з фізичної культури і відповідно фізично розвиваються.
+  Це можна підтвердити відеоматеріалами виконання фізичних вправ нашої групи:</h1></br></br>
+  <div style="width: 230%; text-align: center;">
+  <a class="my-button" href="video.html" style="">Відеоархів</a></div>
+  </br>
+</br></br><div class="line_main"></div></br></br>
+          
             </div>
           </div>
         </div>
