--- a/about_teacher.html
+++ b/about_teacher.html
@@ -134,8 +134,10 @@ img {
               <h1>Про викладачів П12</h1>
             </br><div class="line_h"></div></br></br>
               <div class="" style="text-align: center; width: 200%;"><h1 style="color: rgba(25, 25, 25, 0.95); margin-bottom: 20px;">Куратор</h1><h2 style="color: gray; margin-bottom: 35px;">Ізотова Ірина Олегівна</h2>
-                <iframe width="800" height="450" src="https://www.youtube.com/embed/zloQdc2eGmg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></br></br>
-              </br><details>
+                <img src="img/about/teacher/irina.jpg"></br>
+              </br><p style="font-size: 25px; width: 700px; text-align: center; margin-left: 290px;">Викладач всесвітньої історії. Викладач І категорії. Закінчила Український державний педагогічний університет ім. М. П. Драгоманова. Педагогічний стаж 30 років. З 2006 року працює у КККТЕ НАУ. Нагороджена грамотою директора КФККТЕ НАУ, ректора НАУ, грамотою за І місце у міському конкурсі методичних розробок «Педагогічна знахідка» серед викладачів гуманітарних та соціально-економічних дисциплін м. Києва (2013 р.). Викладає дисципліни: філософія, соціологія, історія України та всесвітня історія. Сфера наукових інтересів: освітній процес у Великій Британії на поч. ХХІ ст., європейські молодіжні культури, методика організації освітнього процесу у умовах дистанційного навчання.</p>
+            </br><div class="line_main"></div></br></br>
+              <details>
                   <summary style="font-size: 30px; color: gray;">Для того, щоб переглянути фотографію з виховної години, тисни сюди</summary>
             <img src="img/about/blog/vikhovna_robota.jpg" style="max-width: 90%; margin-top: 30px;">
                 </details></br></br>
@@ -328,6 +330,8 @@ img {
 
           <div class="col-lg col-md-6 footer-contact">
             <h3>Kovalenko - Konyk Project</h3>
+          
+          <h5>Mentor: Vorochek Svitlana</h5>
             <p>
               <strong>Email: kovalenko.nazar.p762@kfccte-nau.ukr.education or konyk.bohdan.p762@kfccte-nau.ukr.education</strong> -<br>
             </p>
