--- a/blog.html
+++ b/blog.html
@@ -155,24 +155,26 @@
 <!-- ======= Footer ======= -->
 <footer class='footerbg' id="footer">
 
-    <div class="footer-top">
-      <div class="container">
-        <div class="row">
+  <div class="footer-top">
+    <div class="container">
+      <div class="row">
 
-          <div class="col-lg col-md-6 footer-contact">
-            <h3>Kovalenko - Konyk Project</h3>
-            <p>
-              <strong>Email: kovalenko.nazar.p762@kfccte-nau.ukr.education or konyk.bohdan.p762@kfccte-nau.ukr.education</strong> -<br>
-            </p>
-            <div class="social-links mt-3">
-              <a href="https://t.me/jaxer159"><i class='bx bxl-telegram'></i></a>
-              <a href="https://instagram.com/bogdankonyk2016?igshid=ZGUzMzM3NWJiOQ=="><i class='bx bxl-instagram' ></i></a>
-            </div>
+        <div class="col-lg col-md-6 footer-contact">
+          <h3>Kovalenko - Konyk Project</h3>
+        
+        <h5>Mentor: Vorochek Svitlana</h5>
+          <p>
+            <strong>Email: kovalenko.nazar.p762@kfccte-nau.ukr.education or konyk.bohdan.p762@kfccte-nau.ukr.education</strong> -<br>
+          </p>
+          <div class="social-links mt-3">
+            <a href="https://t.me/jaxer159"><i class='bx bxl-telegram'></i></a>
+            <a href="https://instagram.com/bogdankonyk2016?igshid=ZGUzMzM3NWJiOQ=="><i class='bx bxl-instagram' ></i></a>
           </div>
-
         </div>
+
       </div>
     </div>
+  </div>
 
     <div class="container py-4">
       <div class="copyright">
