--- a/inna.html
+++ b/inna.html
@@ -118,6 +118,8 @@
 
           <div class="col-lg col-md-6 footer-contact">
             <h3>Kovalenko - Konyk Project</h3>
+          
+          <h5>Mentor: Vorochek Svitlana</h5>
             <p>
               <strong>Email: kovalenko.nazar.p762@kfccte-nau.ukr.education or konyk.bohdan.p762@kfccte-nau.ukr.education</strong> -<br>
             </p>
